--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.7",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.0"
   }
 }
